--- a/Lesson3/lesson3.html
+++ b/Lesson3/lesson3.html
@@ -47,6 +47,10 @@
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45071.41863775285!2d-93.7321871437253!3d41.58073827080785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ee9faf18108427%3A0x8c20cb5c5b53ee7a!2s318%205th%20St%2C%20West%20Des%20Moines%2C%20IA%2050265!5e0!3m2!1sen!2sus!4v1567693279889!5m2!1sen!2sus" 
     width="400" height="300" frameborder="0" style="border:1px solid yellowgreen;" allowfullscreen=""></iframe>
 
+    <iframe src="https://google.com"></iframe>
+    <br/>    <br/>
+    <div><iframe src="https://en.wikipedia.org/wiki/Same-origin_policy" width="800" height="300"></iframe></div>
+
     <p> frameset tag is not supported in HTML5</p>
    
     &lt;frameset cols=&quot;30%,*,30%&quot;&gt; 
@@ -56,6 +60,16 @@
     <br> &lt;/frameset&gt;
 
     
+
+    <style>
+      border: 1px solid green;
+    </style>
+
+    <p style="border-color: red;">
+      CSS stands for Cascading Style Sheet
+    </p>
+
+
 
 
 </body>
