details on image preview page

--- a/Lesson11/draggableImage.html
+++ b/Lesson11/draggableImage.html
@@ -20,9 +20,21 @@
         height: 500px;
         margin: auto;
     }
+    div{
+        padding: 1em;
+    }
 </style>
 <body>
-    
+<p>
+    This is an image preview page. Using only javascript, css and html this page should allow you to 
+    drag an image from your computer onto the first yellowish box and it will display it as a preview onto 
+    the green box. 
+</p>
+<p>Alternatively you should be able to type a link in the textbox, click <i>Display image</i> button 
+and also preview the image in the green box. 
+</p>
+
+
     <div id="dragImage">Drag image here</div>
 
     <div><input type="text" id="urlOfImage"/><button>Display image</button></div>
