--- a/Lesson14/realApplication.html
+++ b/Lesson14/realApplication.html
@@ -26,9 +26,9 @@
 
         var e1 = document.getElementById('e1');
 
-        e1.innerHTML="my addTwoNumbers returned: "+addTwoNumbers(4,6);
+        e1.innerHTML="my addTwoNumbers returned: "+appjsObj.addTwoNumbers(4,6);
 
-        getResponseFromMailchimp('list_api');
+        appjsObj.getResponseFromMailchimp('list_api');
         
     </script>
 
